Corrected position of hamburger menu icon and ubisoft logo on mobile devices

--- a/src/App.scss
+++ b/src/App.scss
@@ -57,7 +57,7 @@ $rounded-button-background-hover: #ea0069;
     cursor: pointer;
     width: 100%;
     position: fixed;
-    padding: 4px 0px;
+    padding: .4rem 0px;
 
     .ubinav {
 
@@ -66,10 +66,9 @@ $rounded-button-background-hover: #ea0069;
             width: 3rem;
             height: 3rem;
             position: relative;
-            top: 1.2rem;
+            top: 1.5rem;
             left: 1.5rem;
         }
-
 
         .ubi-logo {
             width: 100px;
@@ -77,7 +76,7 @@ $rounded-button-background-hover: #ea0069;
             margin-left: 26px;
             position: relative;
             top: -15px;
-            left: 27%;
+            left: 30%;
         }
 
         @media only screen and (min-width: 415px) {
